-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 12.0.0, Qt Creator 13.0.0-beta1
-
None
-
9b493ccec (master)
See ASAN report:
:-1: error: AddressSanitizer: 183828 byte(s) leaked in 1503 allocation(s).
==1230682==ERROR: LeakSanitizer: detected memory leaks
Indirect leak of 26784 byte(s) in 177 object(s) allocated from:
#0 0x7f78728e1359 in __interceptor_malloc /usr/src/debug/gcc/gcc/libsanitizer/asan/asan_malloc_linux.cpp:69
#1 0x7f786fe5fd91 in QArrayData::allocate(QArrayData**, long long, long long, long long, QArrayData::AllocationOption) (/usr/lib/libQt6Core.so.6+0x25fd91) (BuildId: 461e59198560593883890a59a1b43553366db730)
Indirect leak of 24480 byte(s) in 204 object(s) allocated from:
#0 0x7f78728e2002 in operator new(unsigned long) /usr/src/debug/gcc/gcc/libsanitizer/asan/asan_new_delete.cpp:95
#1 0x7f786fda6318 in QObject::QObject(QObject*) (/usr/lib/libQt6Core.so.6+0x1a6318) (BuildId: 461e59198560593883890a59a1b43553366db730)
Indirect leak of 5042 byte(s) in 71 object(s) allocated from:
#0 0x7f78728e1359 in __interceptor_malloc /usr/src/debug/gcc/gcc/libsanitizer/asan/asan_malloc_linux.cpp:69
#1 0x7f786ffe0be3 (/usr/lib/libQt6Core.so.6+0x3e0be3) (BuildId: 461e59198560593883890a59a1b43553366db730)
Indirect leak of 3344 byte(s) in 2 object(s) allocated from:
#0 0x7f78728e2002 in operator new(unsigned long) /usr/src/debug/gcc/gcc/libsanitizer/asan/asan_new_delete.cpp:95
#1 0x7f78219cf7f6 in Valgrind::Internal::ValgrindRunConfigurationAspect::ValgrindRunConfigurationAspect(ProjectExplorer::Target*) /home/guybrush/dev/qtcreator/master/src/src/plugins/valgrind/valgrindplugin.cpp:34
#2 0x7f78219cffac in ProjectExplorer::RunConfiguration::registerAspect<Valgrind::Internal::ValgrindRunConfigurationAspect>()::
::operator()(ProjectExplorer::Target*) const /home/guybrush/dev/qtcreator/master/src/src/plugins/projectexplorer/runconfiguration.h:122
#3 0x7f78219d18f7 in Valgrind::Internal::ValgrindRunConfigurationAspect* std::__invoke_impl<Valgrind::Internal::ValgrindRunConfigurationAspect*, ProjectExplorer::RunConfiguration::registerAspect<Valgrind::Internal::ValgrindRunConfigurationAspect>()::
&, ProjectExplorer::Target*>(std::__invoke_other, ProjectExplorer::RunConfiguration::registerAspect<Valgrind::Internal::ValgrindRunConfigurationAspect>()::
{lambda(ProjectExplorer::Target*)#1}&, ProjectExplorer::Target*&&) /usr/include/c++/13.2.1/bits/invoke.h:61
#4 0x7f78219d1346 in std::enable_if<is_invocable_r_v<Utils::BaseAspect*, ProjectExplorer::RunConfiguration::registerAspect<Valgrind::Internal::ValgrindRunConfigurationAspect>()::
&, ProjectExplorer::Target*>, Utils::BaseAspect*>::type std::__invoke_r<Utils::BaseAspect*, ProjectExplorer::RunConfiguration::registerAspect<Valgrind::Internal::ValgrindRunConfigurationAspect>()::
{lambda(ProjectExplorer::Target*)#1}&, ProjectExplorer::Target*>(ProjectExplorer::RunConfiguration::registerAspect<Valgrind::Internal::ValgrindRunConfigurationAspect>()::
{lambda(ProjectExplorer::Target*)#1}&, ProjectExplorer::Target*&&) /usr/include/c++/13.2.1/bits/invoke.h:114
#5 0x7f78219d0ec7 in std::_Function_handler<Utils::BaseAspect* (ProjectExplorer::Target*), ProjectExplorer::RunConfiguration::registerAspect<Valgrind::Internal::ValgrindRunConfigurationAspect>()::
>::_M_invoke(std::_Any_data const&, ProjectExplorer::Target*&&) /usr/include/c++/13.2.1/bits/std_function.h:290
#6 0x7f784fb75cbe in std::function<Utils::BaseAspect* (ProjectExplorer::Target*)>::operator()(ProjectExplorer::Target*) const /usr/include/c++/13.2.1/bits/std_function.h:591
#7 0x7f784fb6bac4 in ProjectExplorer::RunConfigurationFactory::create(ProjectExplorer::Target*) const /home/guybrush/dev/qtcreator/master/src/src/plugins/projectexplorer/runconfiguration.cpp:604
#8 0x7f784fb6bc19 in ProjectExplorer::RunConfigurationCreationInfo::create(ProjectExplorer::Target*) const /home/guybrush/dev/qtcreator/master/src/src/plugins/projectexplorer/runconfiguration.cpp:613
#9 0x7f784fc7cff7 in ProjectExplorer::Target::updateDefaultRunConfigurations() /home/guybrush/dev/qtcreator/master/src/src/plugins/projectexplorer/target.cpp:737
#10 0x7f784fc70d8f in operator() /home/guybrush/dev/qtcreator/master/src/src/plugins/projectexplorer/target.cpp:124
#11 0x7f784fc864a9 in call /usr/include/qt6/QtCore/qobjectdefs_impl.h:137
#12 0x7f784fc85a9c in call<QtPrivate::List<bool>, void> /usr/include/qt6/QtCore/qobjectdefs_impl.h:339
#13 0x7f784fc85363 in impl /usr/include/qt6/QtCore/qobjectdefs_impl.h:522
#14 0x7f786fda5076 in QObject::event(QEvent*) (/usr/lib/libQt6Core.so.6+0x1a5076) (BuildId: 461e59198560593883890a59a1b43553366db730)
Indirect leak of 3264 byte(s) in 18 object(s) allocated from:
#0 0x7f78728e1359 in __interceptor_malloc /usr/src/debug/gcc/gcc/libsanitizer/asan/asan_malloc_linux.cpp:69
#1 0x7f786fda40a5 (/usr/lib/libQt6Core.so.6+0x1a40a5) (BuildId: 461e59198560593883890a59a1b43553366db730)
Indirect leak of 2400 byte(s) in 18 object(s) allocated from:
#0 0x7f78728e1359 in __interceptor_malloc /usr/src/debug/gcc/gcc/libsanitizer/asan/asan_malloc_linux.cpp:69
#1 0x7f786ffe0be3 (/usr/lib/libQt6Core.so.6+0x3e0be3) (BuildId: 461e59198560593883890a59a1b43553366db730)
#2 0x7f782189ab01 in QArrayDataPointer<char>::~QArrayDataPointer() /usr/include/qt6/QtCore/qarraydatapointer.h:102
Indirect leak of 2232 byte(s) in 12 object(s) allocated from:
#0 0x7f78728e1359 in __interceptor_malloc /usr/src/debug/gcc/gcc/libsanitizer/asan/asan_malloc_linux.cpp:69
#1 0x7f786ffe0be3 (/usr/lib/libQt6Core.so.6+0x3e0be3) (BuildId: 461e59198560593883890a59a1b43553366db730)
#2 0x7f787169562d in std::unique_ptr<Utils::Internal::IntegerAspectPrivate, std::default_delete<Utils::Internal::IntegerAspectPrivate> >::operator->() const /usr/include/c++/13.2.1/bits/unique_ptr.h:463
Indirect leak of 2112 byte(s) in 24 object(s) allocated from:
#0 0x7f78728e2002 in operator new(unsigned long) /usr/src/debug/gcc/gcc/libsanitizer/asan/asan_new_delete.cpp:95
#1 0x7f786fdacf71 in QObjectPrivate::connectImpl(QObject const*, int, QObject const*, void*, QtPrivate::QSlotObjectBase, int, int const*, QMetaObject const*) (/usr/lib/libQt6Core.so.6+0x1acf71) (BuildId: 461e59198560593883890a59a1b43553366db730)
Indirect leak of 1768 byte(s) in 2 object(s) allocated from:
...
SUMMARY: AddressSanitizer: 183828 byte(s) leaked in 1503 allocation(s).