ProjectExplorer: Don't leak runconfig's GlobalOrProjectAspects

Fixes: QTCREATORBUG-30075
Change-Id: Ic82f8257521f72d6e3ccd436d17bff8434f11a1d
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>